       Canon PIXMA MP990
       Canon PIXUS iP2700
       Canon PIXMA MG5100
       Canon PIXMA MG5200
       Canon PIXMA MG6100
       Canon PIXMA MG8100

     - Epson inkjet printers:

       EPSON B-310
       EPSON B-310N
       EPSON B-510DN
       EPSON ME Office 600F
       EPSON ME Office 620F
       Epson Stylus Pro 3885
       Epson Stylus Pro 7700 (EXPERIMENTAL)
       Epson Stylus Pro 9700 (EXPERIMENTAL)

  2) Add additional photo modes to Canon inkjet printers.

  3) Correct page size limit for EPSON Stylus Pro 7800, 7880, 9800,
     and 9880 (previously these printers had overly restrictive page
     limits).

  4) Correct printing to the EPSON Stylus NX200, NX215, SX200, SX205,
     SX210, and SX215.

  5) Corrected basic printer definitions of EPSON Stylus Pro 3800,
     3880, 7800, and 9800.

  6) Corrected media definitions of EPSON Stylus Pro 3800, 3880, 4800,
     4880, 7800, 7880, 9800, 9880, 11800, and 11880.

  7) Improved printing quality for EPSON Stylus Pro 3880, 4880, 7880,
     9880, and 11880.

  8) Allow EPSON Stylus Pro 3800 and 3880 to select matte and photo
     black ink automatically based on ink set choice (it is no longer
     necessary to set this on the front panel).

  9) Improved reliability of escputil.


* Changes from 5.2.5

   1) New printers supported in this release:

      - Canon inkjet printers:

	Canon PIXMA MP360
	Canon PIXMA MP370
	Canon PIXMA MP390
	Canon PIXMA MP510
	Canon PIXMA MP970

      - Epson inkjet printers:

	EPSON Artisan 50
	EPSON EP-302
	EPSON EP-702A
	EPSON Stylus Photo P50
	EPSON Stylus Pro 3800 (EXPERIMENTAL)
	EPSON Stylus Pro 3880 (EXPERIMENTAL)
	EPSON Stylus Pro 4800
	EPSON Stylus Pro 4880
	EPSON Stylus Pro 11800
	EPSON Stylus T59
	EPSON Stylus T60
	EPSON Stylus TX659

	NOTE: The support for the Epson Stylus Pro 3800 and 3880 is
	experimental and WILL CHANGE SUBSTANTIALLY in future releases.
	It should not be considered suitable for production use at
	this time.

      - PCL laser printers:
