@@ -1,0 +1,204 @@
+<?xml version="1.0"?>
+
+<gutenprint xmlns="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0"
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0 gutenprint.xsd">
+<copyright>
+ *   Copyright 2008 Robert Krawitz (rlk@alum.mit.edu)
+ *
+ *   This program is free software; you can redistribute it and/or modify it
+ *   under the terms of the GNU General Public License as published by the Free
+ *   Software Foundation; either version 2 of the License, or (at your option)
+ *   any later version.
+ *
+ *   This program is distributed in the hope that it will be useful, but
+ *   WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ *   or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ *   for more details.
+ *
+ *   You should have received a copy of the GNU General Public License
+ *   along with this program; if not, write to the Free Software
+ *   Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+</copyright>
+<escp2:InkGroup name="pro_ultrachrome_k3">
+<InkList translate="text" name="ultra3photo" text="Photo Black">
+ <initSequence>IK\002\000\000\061</initSequence>
+ <Shades>
+  <shade count="1">1.000000</shade>
+  <shade count="1">1.000000</shade>
+  <shade count="1">1.000000</shade>
+  <shade count="1">1.000000</shade>
+  <shade count="1">1.000000</shade>
+  <shade count="1">1.000000</shade>
+  <shade count="1">1.000000</shade>
+  <shade count="1">1.000000</shade>
+ </Shades>
+
+ <InkName translate="text" name="CMYK" text="Four Color Standard" InkID="CMYK">
+  <Channels>
+   <channel name="black" index="0">
+    <subchannel color="0" name="Black" text="Black" translate="text">
+     <ChannelDensityParam name="BlackDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_cyan" index="1">
+    <HueCurveParam name="CyanHueCurve"/>
+    <subchannel color="2" name="Cyan" text="Cyan" translate="text">
+     <ChannelDensityParam name="CyanDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_magenta" index="2">
+    <HueCurveParam name="MagentaHueCurve"/>
+    <subchannel color="1" name="Magenta" text="Magenta" translate="text">
+     <ChannelDensityParam name="MagentaDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_yellow" index="3">
+    <HueCurveParam name="YellowHueCurve"/>
+    <subchannel color="4" name="Yellow" text="Yellow" translate="text">
+     <ChannelDensityParam name="YellowDensity"/>
+    </subchannel>
+   </channel>
+  </Channels>
+ </InkName>
+
+ <InkName translate="text" name="CMY" text="Three Color Composite" InkID="CMYK">
+  <Channels>
+   <channel name="standard_cyan" index="1">
+    <HueCurveParam name="CyanHueCurve"/>
+    <subchannel color="2" name="Cyan" text="Cyan" translate="text">
+     <ChannelDensityParam name="CyanDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_magenta" index="2">
+    <HueCurveParam name="MagentaHueCurve"/>
+    <subchannel color="1" name="Magenta" text="Magenta" translate="text">
+     <ChannelDensityParam name="MagentaDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_yellow" index="3">
+    <HueCurveParam name="YellowHueCurve"/>
+    <subchannel color="4" name="Yellow" text="Yellow" translate="text">
+     <ChannelDensityParam name="YellowDensity"/>
+    </subchannel>
+   </channel>
+  </Channels>
+ </InkName>
+
+ <InkName translate="text" name="PhysicalCMYK" text="Four Color Raw" InkID="Extended">
+  <Channels>
+   <channel name="black" index="0">
+    <subchannel color="0" name="Black" text="Black" translate="text">
+     <ChannelDensityParam name="BlackDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_cyan" index="1">
+    <subchannel color="2" name="Cyan" text="Cyan" translate="text">
+     <ChannelDensityParam name="CyanDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_magenta" index="2">
+    <subchannel color="1" name="Magenta" text="Magenta" translate="text">
+     <ChannelDensityParam name="MagentaDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_yellow" index="3">
+    <subchannel color="4" name="Yellow" text="Yellow" translate="text">
+     <ChannelDensityParam name="YellowDensity"/>
+    </subchannel>
+   </channel>
+  </Channels>
+ </InkName>
+</InkList>
+
+<InkList translate="text" name="ultra3matte" text="Matte Black">
+ <initSequence>IK\002\000\000\121</initSequence>
+ <Shades>
+  <shade count="3">1.000000</shade>
+  <shade count="2">1.000000</shade>
+  <shade count="2">1.000000</shade>
+  <shade count="1">1.000000</shade>
+  <shade count="1">1.000000</shade>
+  <shade count="1">1.000000</shade>
+  <shade count="1">1.000000</shade>
+  <shade count="1">1.000000</shade>
+ </Shades>
+
+ <InkName translate="text" name="CMYK" text="Four Color Standard" InkID="CMYK">
+  <Channels>
+   <channel name="black" index="0">
+    <subchannel color="0" subchannel="0" name="Black" text="Black" translate="text">
+     <ChannelDensityParam name="BlackDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_cyan" index="1">
+    <HueCurveParam name="CyanHueCurve"/>
+    <subchannel color="2" name="Cyan" text="Cyan" translate="text">
+     <ChannelDensityParam name="CyanDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_magenta" index="2">
+    <HueCurveParam name="MagentaHueCurve"/>
+    <subchannel color="1" name="Magenta" text="Magenta" translate="text">
+     <ChannelDensityParam name="MagentaDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_yellow" index="3">
+    <HueCurveParam name="YellowHueCurve"/>
+    <subchannel color="4" name="Yellow" text="Yellow" translate="text">
+     <ChannelDensityParam name="YellowDensity"/>
+    </subchannel>
+   </channel>
+  </Channels>
+ </InkName>
+
+ <InkName translate="text" name="CMY" text="Three Color Composite" InkID="CMYK">
+  <Channels>
+   <channel name="standard_cyan" index="1">
+    <HueCurveParam name="CyanHueCurve"/>
+    <subchannel color="2" name="Cyan" text="Cyan" translate="text">
+     <ChannelDensityParam name="CyanDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_magenta" index="2">
+    <HueCurveParam name="MagentaHueCurve"/>
+    <subchannel color="1" name="Magenta" text="Magenta" translate="text">
+     <ChannelDensityParam name="MagentaDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_yellow" index="3">
+    <HueCurveParam name="YellowHueCurve"/>
+    <subchannel color="4" name="Yellow" text="Yellow" translate="text">
+     <ChannelDensityParam name="YellowDensity"/>
+    </subchannel>
+   </channel>
+  </Channels>
+ </InkName>
+
+ <InkName translate="text" name="PhysicalCMYK" text="Four Color Raw" InkID="Extended">
+  <Channels>
+   <channel name="black" index="0">
+    <subchannel color="0" name="Black" text="Black" translate="text">
+     <ChannelDensityParam name="BlackDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_cyan" index="1">
+    <subchannel color="2" name="Cyan" text="Cyan" translate="text">
+     <ChannelDensityParam name="CyanDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_magenta" index="2">
+    <subchannel color="1" name="Magenta" text="Magenta" translate="text">
+     <ChannelDensityParam name="MagentaDensity"/>
+    </subchannel>
+   </channel>
+   <channel name="standard_yellow" index="3">
+    <subchannel color="4" name="Yellow" text="Yellow" translate="text">
+     <ChannelDensityParam name="YellowDensity"/>
+    </subchannel>
+   </channel>
+  </Channels>
+ </InkName>
+</InkList>
+</escp2:InkGroup>
+</gutenprint>
