@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.23 2011/01/06 01:08:52 rlk Exp $
+## $Id: Makefile.am,v 1.24 2011/01/06 01:28:59 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -136,7 +136,8 @@ pkgxmldata_DATA =				\
 	model_107.xml				\
 	model_108.xml				\
 	model_109.xml				\
-	model_110.xml
+	model_110.xml				\
+	model_111.xml
 
 xml-stamp: $(pkgxmldata_DATA) Makefile.am
 	-rm -f $@ $@.tmp
