@@ -1,0 +1,137 @@
+<?xml version="1.0"?>
+
+<gutenprint xmlns="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0"
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0 gutenprint.xsd">
+<copyright>
+ *   Copyright 2008 Robert Krawitz (rlk@alum.mit.edu)
+ *
+ *   This program is free software; you can redistribute it and/or modify it
+ *   under the terms of the GNU General Public License as published by the Free
+ *   Software Foundation; either version 2 of the License, or (at your option)
+ *   any later version.
+ *
+ *   This program is distributed in the hope that it will be useful, but
+ *   WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ *   or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ *   for more details.
+ *
+ *   You should have received a copy of the GNU General Public License
+ *   along with this program; if not, write to the Free Software
+ *   Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+</copyright>
+<escp2:model id="111">
+ <media src="escp2/media/pro_ultrachrome_k3.xml"/>
+ <inputSlots src="escp2/inputslots/pro_roll_feed.xml"/>
+ <qualityPresets src="escp2/qualitypresets/standard.xml"/>
+ <inkGroup src="escp2/inks/pro_ultrachrome_k34.xml"/>
+ <printerWeaves src="escp2/weaves/pro7600.xml"/>
+ <verticalBorderlessSequence>SN\003\000\000\011\001</verticalBorderlessSequence>
+ <preinitSequence>\000\000\000\033\001@EJL\0401284.4\012@EJL\040\040\040\040\040\012\033@</preinitSequence>
+ <postinitRemoteSequence>JE\001\000\000</postinitRemoteSequence>
+ <commandSet>Pro</commandSet>
+ <borderless>Yes</borderless>
+ <supportsVariableDropsizes/>
+ <hasFastGraymode/>
+ <sendZeroAdvance/>
+ <supportsD4Mode/>
+ <preferredEnvelopeOrientation>Landscape</preferredEnvelopeOrientation>
+ <headConfiguration type="default">
+  <Nozzles>1</Nozzles>
+  <MinNozzles>1</MinNozzles>
+  <FirstNozzle>0</FirstNozzle>
+  <NozzleSeparation>1</NozzleSeparation>
+ </headConfiguration>
+ <physicalChannels>7</physicalChannels>
+ <baseSeparation>360</baseSeparation>
+ <resolutionScale>14400</resolutionScale>
+ <minimumResolution>360 180</minimumResolution>
+ <maximumResolution>2880 1440</maximumResolution>
+ <separationRows>1</separationRows>
+ <zeroMarginOffset>80</zeroMarginOffset>
+ <microLeftMargin>42</microLeftMargin>
+ <minHorizontalAlignment>1</minHorizontalAlignment>
+ <baseHorizontalAlignment>28800</baseHorizontalAlignment>
+ <bidirectionalAutoUpperLimit>2073600</bidirectionalAutoUpperLimit>
+ <minimumMediaSize>504 504</minimumMediaSize>
+ <maximumMediaSize>1224 86400</maximumMediaSize>
+ <maximumImageableArea>1224 86400</maximumImageableArea>
+ <margins interleave="soft" media="sheet">9 9 9 40</margins>
+ <margins interleave="printer" media="sheet">9 9 9 40</margins>
+ <margins interleave="soft" media="roll">9 9 0 0</margins>
+ <margins interleave="printer" media="roll">9 9 0 0</margins>
+ <AlignmentChoices>3 15 0 0</AlignmentChoices>
+ <ChannelNames>
+  <ChannelName translate="name" name="Black"/>
+  <ChannelName translate="name" name="Cyan"/>
+  <ChannelName translate="name" name="Magenta"/>
+  <ChannelName translate="name" name="Yellow"/>
+ </ChannelNames>
+ <resolutions>
+  <resolution translate="text" name="360x180dpi" text="360 x 180 DPI Draft">
+   <physicalResolution>360 180</physicalResolution>
+   <printerWeave command="\033(i\001\000\000"/>
+   <parameter type="float" name="escp2_density">2.300000</parameter>
+   <parameter type="integer" name="escp2_ink_type">17</parameter>
+   <parameter type="integer" name="escp2_base_res">2880</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.160000</parameter>
+   <parameter type="float" name="DropSize2">0.400000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="360pro" text="360 DPI">
+   <physicalResolution>360 360</physicalResolution>
+   <printerWeave command="\033(i\001\000\001"/>
+   <parameter type="float" name="escp2_density">1.150000</parameter>
+   <parameter type="integer" name="escp2_ink_type">17</parameter>
+   <parameter type="integer" name="escp2_base_res">2880</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.160000</parameter>
+   <parameter type="float" name="DropSize2">0.400000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="720x360mw" text="720 x 360 DPI">
+   <physicalResolution>720 360</physicalResolution>
+   <printerWeave command="\033(i\001\000\001"/>
+   <parameter type="float" name="escp2_density">0.580000</parameter>
+   <parameter type="integer" name="escp2_ink_type">17</parameter>
+   <parameter type="integer" name="escp2_base_res">2880</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.160000</parameter>
+   <parameter type="float" name="DropSize2">0.400000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="720mw" text="720 DPI">
+   <physicalResolution>720 720</physicalResolution>
+   <printerWeave command="\033(i\001\000\001"/>
+   <parameter type="float" name="escp2_density">0.766000</parameter>
+   <parameter type="integer" name="escp2_ink_type">16</parameter>
+   <parameter type="integer" name="escp2_base_res">2880</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.200000</parameter>
+   <parameter type="float" name="DropSize2">0.450000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="1440x720mw" text="1440 x 720 DPI">
+   <physicalResolution>1440 720</physicalResolution>
+   <printerWeave command="\033(i\001\000\001"/>
+   <parameter type="float" name="escp2_density">0.388000</parameter>
+   <parameter type="integer" name="escp2_ink_type">16</parameter>
+   <parameter type="integer" name="escp2_base_res">2880</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.200000</parameter>
+   <parameter type="float" name="DropSize2">0.450000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="2880x1440mw" text="2880 x 1440 DPI">
+   <physicalResolution>2880 1440</physicalResolution>
+   <printerWeave command="\033(i\001\000\001"/>
+   <parameter type="float" name="escp2_density">0.479000</parameter>
+   <parameter type="integer" name="escp2_ink_type">5</parameter>
+   <parameter type="integer" name="escp2_base_res">2880</parameter>
+   <parameter type="integer" name="escp2_bits">1</parameter>
+   <parameter type="float" name="DropSize1">1.000000</parameter>
+  </resolution>
+ </resolutions>
+</escp2:model>
+</gutenprint>
